2006-01-28 Kalpit Desai <kvdesai@email.unc.edu>
	* lt_analysis_gui.m: 
	- Now asks user for confirmation when a file in the 'to load list' is already loaded in the data base. Eliminates need of first removing the file and reloading it when changing the experiment type.
	- Fixed a bug in plotting of multiples PSDs of lowbandwidth data
	- Fixed a crash that happened when user 'cancelled' edits of tag.
	- Now 'Cut' allows to select a point outside axis as the boundary. Useful when we want to remove all the data before or after certain time.
	* lt_analysis_gui.fig: 'Overlay Ch 8' renamed to 'Overlay Mags'

2006-01-27 Kalpit Desai <kvdesai@email.unc.edu>
	* lt_analysis_gui.m: Now loglog plots are plotted taking log of the signal first and then plotting on linear axis.
	
2006-01-12 Kalpit Desai <kvdesai@email.unc.edu>
	* lt_analysis_gui.m: 
	- Fixed several bugs with PSD computation and plotting
	* lt_analysis_gui.fig: All fonts are now 8 points, this makes it look right on Tim's laptop. 

2006-01-04 Kalpit Desai <kvdesai@email.unc.edu>
	* lt_analysis_gui.m: 
	- Fixed the bug where program crashed while trying to 3d-plot empty data.
	- Fixed the behaviour of dragging box after zoom
	- Now prints the results on command line in addition of displaying it.

2006-01-04 Kalpit Desai <kvdesai@email.unc.edu>
	* lt_analysis_gui.m: 
	- Added ability to play sound for the data selected inside box
	- Also plots a spectrogram of the signal while playing the sound.
	* lt_analysis_gui.fig
	- Added button for playing sound
	- Added a frame, using to mask the controls when program is busy and needs to avoid accidental clicks.
	
2005-12-26 Kalpit Desai <kvdesai@email.unc.edu>
	* lt_analysis_gui.m: Added a check for empty database in couple of places.

2005-12-26 Kalpit Desai <kvdesai@email.unc.edu>
	* lt_analysis_gui.m: 